--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -76,9 +76,5 @@
     .theme-switch-wrapper{
       justify-self: end;
     }
-
-    .sidebar-toggle{
-      justify-self: end;
-    }
   }
 }
