--- a/styles/header.css
+++ b/styles/header.css
@@ -1,4 +1,5 @@
 .header {
+  min-width: 300px;
   container-name: header;
   container-type: inline-size;
   padding-top: var(--space-fluid-1);
